--- a/style.css
+++ b/style.css
@@ -166,6 +166,14 @@
       margin: auto;
       text-align: center;
     }
+    #cartItems button {
+      margin-left: 5px;
+      padding: 2px 6px;
+      font-weight: bold;
+      border-radius: 4px;
+      border: 1px solid #333;
+      cursor: pointer;
+    }
 
     /* FOOTER */
     footer {
@@ -221,4 +229,5 @@
       }
       section{
         padding:60px 20px;
+
       }
